src/stylesheets/style.css
#wrapper{
    color: black;
    background-color: rgb(226, 226, 226);
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    padding: 10px;
    padding-bottom: 2%;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
}
#modalBG {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: fixed;
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;
    z-index: 1;
    background-color: rgba(110, 110, 110, 0.74);
}
#loadingDiv {
    display: flex;
    justify-content: space-around;
    flex-direction: column;
    align-items: center;
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -40%);
    width: 150px;
    height: 150px;
    z-index: 2;
    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0));
    border-radius: 5px;
}
#loadText {
    display: block;
    position: relative;
    flex: none;
    margin: auto;
    font-size: 18pt;
    color: white;
}
#loadingIcon {
    position: relative;
    margin: auto;
    flex: none;
    width: 75px;
    height: 75px;
    z-index: 3;
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}
.spin {
    animation: spin 1.5s reverse linear 0s infinite;
}
@keyframes fadeIn {
    0% {
        opacity: 0%;
    }
    100% {
        opacity: 100%;
    }
}
@keyframes fadeOut {
    0% {
        opacity: 100%;
    }
    100% {
        opacity: 0%;
        display: none;
    }
}
.fadeIn {
    animation: .3s ease-in 0s 1 fadeIn;
}
.fadeOut {
    animation: .3s ease-in 0s 1 forwards fadeOut;
}
#modalDiv {
    z-index: 4;
    display: none;
    flex: none;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}
.modal{
    display: block;
    position: fixed;
    transform:translateZ(0);
    flex: none;
    z-index: 5;
    border-radius: 10px;
    border: white solid 15px;
}
#modalLinkSpan {
    background-color: white;
    border-radius: 5px;
    position: absolute;
    bottom: 2%;
    padding: 5px;
    display: block;
    z-index: 6;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    transform:translate(-50%, 0);
    left: 50%;
    width: fit-content;
}
.modalLink {
    color: black;
}
.componentDiv{
    background-color: white;
    border-radius: 10px;
    box-shadow: grey 20px 20px 20px;
    margin-top: 15px;
}
.searchDiv {
    position: relative;
    flex: none;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    width: 50vw;
    height: 40px;
    font-size: 16px;
}
#paginateDiv {
    width: 30vw;
    height: 5vh;
    position: relative;
    flex: none;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}
.activePageNumber {
    cursor: pointer;
    background: rgb(226, 226, 226);
}
.inactivePageNumber {
    background: rgb(255,255,255);
    cursor: default;
}
.pageNumber {
    flex: none;
    width: 4vh;
    height: 4vh;
    display: inline-block;
    line-height: 4vh;
    position: relative;
    border-radius: 5px;
    text-align: center;
    font-size: 14pt;
}
#searchTextInput {
    color: black;
    position: relative;
    width: 50%;
    height: 25px;
    flex: none;
    border: none;
    border-radius: 5px;
    background-color: rgba(185, 185, 185, 0.2);
    font-family:Verdana, Geneva, Tahoma, sans-serif;
}
#searchButton {
    color: black;
    position: relative;
    flex: none;
    width: 35%;
    height: 25px;
    cursor: pointer;
    border-radius: 5px;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
}
.thumbnailDivHolder{
    width: 90vw;
    height: 75%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    position: absolute;
    left: 50%;
    top: 0px;
    transform: translate(-50%, 0);
    flex: none;
    overflow-y: auto;
    padding: 10px;
}
.thumbnailDivWrapper {
    position: relative;
    margin: auto;
    padding: 10px;
}
.thumbnailDiv {
    flex: none;
    width: 250px;
    height: 250px;
    position: relative;
    border-radius: 10px;
    margin: auto;
    overflow: hidden;
}
.thumbnail{
    width: 100%;
    height: 100%;
    object-fit: cover;
}
#pexelsIconDiv {
    right: 2%;
    bottom: 2%;
    position: absolute;
}
#pexelsIconImg {
    width: 75px;
    height: auto;
}
@media (orientation: portrait) {
    .modal {
        width: 80%;
        height: auto;
    }
}
@media (orientation: landscape) {
    .modal {
        width: auto;
        height: 80%;
    }
}
@media screen and (max-width: 1300px) {
    .thumbnailDivHolder {
        height: 74vh;
    }
}
@media screen and (max-width: 600px) {
    #wrapper{
        justify-content: space-around;
    }
    .thumbnailDivHolder{
        position: relative;
        width: calc(250px + 3vh);
        height: calc(250px + 3vh);
        flex-wrap: nowrap;
        align-items: center;
        overflow: hidden;
        overflow-x: auto;
        display: flex;
        justify-content: space-between;
        transform: translate(-50%, 0);
        padding: 15px;
    }
    #paginateDiv{
        bottom: 6%;
        width: 60vw;
    }
    .searchDiv{
        bottom: 5%;
    }
    .componentDiv{
        margin-top: 0px;
    }
}
@media screen and (max-width: 500px) {
    .searchDiv {
        width: 90%;
    }
}
@media screen and (max-width: 450px) {
    #modal{
        width: 85vw;
        height: auto;
    }
    #modalLinkSpan{
        font-size: 8pt;
    }
}

@media screen and (max-height: 600px) {
    #modalLinkSpan {
        padding: 2px;
        font-size: 8pt;
        bottom: 5px;
    }
}
@media screen and (max-height: 450px) {
    .modal{
        top: 2.5%;
    }
    .thumbnailDiv {
        width: 200px;
        height: 200px;
        margin: 5px;
    }
    .componentDiv {
        margin: 5px;
    }
    .searchDiv{
        height: 35px;
    }
    #paginateDiv{
        height: 7vh;
    }
    .pageNumber {
        width: 6vh;
        height: 6vh;
        line-height: 6vh;
    }
    .thumbnailDivHolder {
        height: 64%;
        padding: 5px;
    }
}

